# Steam-Wishlist-Tracker

./: README.md  main.py  pyproject.toml
.github/workflowa/: steam_pipeline.yml
.github/workflows/: steam_pipeline.yml
config/: .env.example  settings.yaml
data/: apps_info.json  notification_template.json  notified.json  promo_ids.json  wishlist_ids.json
src/: extraction.py  load.py  notify.py  tools.py  transformation.py
