[project]
name = "steam-wishlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-webhook>=1.4.1",
    "pandas>=3.0.2",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]
